[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ir_trainer"
version = "0.1.0"
description = "Tools for intron retention training and analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "melonheader" }]

# Keep core light; heavy deps go to optional extras
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "h5py>=3.9",
  "tqdm>=4.65",
]

[project.optional-dependencies]
train = [
  "torch>=2.2",
  "pytorch-lightning>=2.2",
  "torchmetrics>=1.3",
  "scikit-learn>=1.4",  # used by evaluate()
]
viz = [
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "scikit-learn>=1.4",
]

all = ["ir_trainer[train,viz,spliceai]"]

[project.urls]
Homepage = "https://github.com/melonheader/ir_toolkit"
